--- a/JobWebscraper/requirements.txt
+++ b/JobWebscraper/requirements.txt
@@ -1,7 +1,12 @@
 attrs==19.3.0
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 coverage==5.0.3
 entrypoints==0.3
 flake8==3.7.9
+idna==2.8
 importlib-metadata==1.5.0
 mccabe==0.6.1
 more-itertools==8.2.0
@@ -13,6 +18,9 @@ pyflakes==2.1.1
 pyparsing==2.4.6
 pytest==5.3.5
 pytest-cov==2.8.1
+requests==2.22.0
 six==1.14.0
+soupsieve==1.9.5
+urllib3==1.25.8
 wcwidth==0.1.8
 zipp==2.2.0
