--- a/.circleci/requirements.txt
+++ b/.circleci/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 coverage==5.0.3
 entrypoints==0.3
 flake8==3.7.9
+html5lib==1.0.1
 idna==2.8
 importlib-metadata==1.5.0
 mccabe==0.6.1
@@ -23,4 +24,5 @@ six==1.14.0
 soupsieve==1.9.5
 urllib3==1.25.8
 wcwidth==0.1.8
+webencodings==0.5.1
 zipp==2.2.0
